--- a/src/main/resources/templates/catalog/product.html
+++ b/src/main/resources/templates/catalog/product.html
@@ -6,13 +6,14 @@
 
   <link rel="StyleSheet" href="/css/mypetstore.css" type="text/css"
         media="screen" />
-  <header th:replace="common/top"></header>
+
 
 </head>
 
 <body>
+<header th:replace="common/top"></header>
 <div id="BackLink">
-    <a href="/catalog/viewCategory?categoryId=${product.categoryId}">Return to</a>
+    <a th:href="@{/catalog/viewCategory?categoryId=${product.categoryId}}">Return to</a>
 </div>
 
 <div id="Catalog">
@@ -34,7 +35,7 @@
                 <td th:text="${item1.attribute1}">attribut1</td>
                 <td th:text="'$' + ${#numbers.formatDecimal(item1.listPrice, 1, 2)}"></td>
                 <td>
-                    <a href="addItemToCart?workingItemId=${item.itemId}&act=CART" class="Button">Add to Cart</a>
+                    <a th:href="@{addItemToCart(workingItemId=${item1.itemId},act='CART')}" class="Button">Add to Cart</a>
                 </td>
             </tr>
         </th:block>
