--- a/src/main/resources/templates/cart/cart.html
+++ b/src/main/resources/templates/cart/cart.html
@@ -11,7 +11,7 @@
 <body>
 <header th:replace="common/top"></header>
 <div id="BackLink">
-    <a href="/catalog/index">Return to Main Menu</a>
+    <a th:href="/catalog/index">Return to Main Menu</a>
 </div>
 
 
@@ -22,7 +22,7 @@
 
         <h2>Shopping Cart</h2>
 
-        <form action="updateCart" method="post">
+        <form th:action="updateCart" method="post">
             <table id="Items">
                 <tr>
                     <th><b>Item ID</b></th>
@@ -35,11 +35,11 @@
                     <th>&nbsp;</th>
                 </tr>
 
-                <c:if test="${sessionScope.cart.numberOfItems == 0 || sessionScope.cart.numberOfItems == null}" >
+                <th:if="${sessionScope.cart.numberOfItems == 0 || sessionScope.cart.numberOfItems == null}" >
                     <tr>
                         <td colspan="8"><b>Your cart is empty.</b></td>
                     </tr>
-                </c:if>
+                </th:if>
 
                 <c:forEach var="cartItem" items="${sessionScope.cart.cartItems}">
                     <tr class="item" itemID=${cartItem.item.itemId}>
