--- a/src/main/resources/templates/cart/cart.html
+++ b/src/main/resources/templates/cart/cart.html
@@ -10,8 +10,10 @@
 </head>
 <body>
 <header th:replace="common/top"></header>
+
+
 <div id="BackLink">
-    <a th:href="/catalog/index">Return to Main Menu</a>
+    <a href="/catalog/index">Return to Main Menu</a>
 </div>
 
 
@@ -22,7 +24,7 @@
 
         <h2>Shopping Cart</h2>
 
-        <form th:action="updateCart" method="post">
+        <form>
             <table id="Items">
                 <tr>
                     <th><b>Item ID</b></th>
@@ -35,40 +37,39 @@
                     <th>&nbsp;</th>
                 </tr>
 
-                <th:if="${sessionScope.cart.numberOfItems == 0 || sessionScope.cart.numberOfItems == null}" >
-                    <tr>
+
+                    <tr th:if="${session.cart.numberOfItems == 0 || session.cart.numberOfItems == null}">
                         <td colspan="8"><b>Your cart is empty.</b></td>
                     </tr>
-                </th:if>
-
-                <c:forEach var="cartItem" items="${sessionScope.cart.cartItems}">
+                <div th:if="${session.cart.numberOfItems != 0 && session.cart.numberOfItems != null}">
+                <th:block th:each="cartItem : ${session.cart.cartItems}">
                     <tr class="item" itemID=${cartItem.item.itemId}>
                         <td class="itemId">
 
-                            <a href="itemForm?itemId=${cartItem.item.itemId}">${cartItem.item.itemId} </a>
+                            <a th:href="@{itemForm(itemId=${cartItem?.item?.itemId})}">${cartItem?.item?.itemId} </a>
 
                         </td>
-                        <td>${cartItem.item.product.productId}</td>
-                        <td>${cartItem.item.attribute1} ${cartItem.item.attribute2}
-                            ${cartItem.item.attribute3} ${cartItem.item.attribute4}
-                            ${cartItem.item.attribute5} ${cartItem.item.product.name}</td>
-                        <td>${cartItem.inStock}</td>
+                        <td th:text="${cartItem?.item?.product?.productId}"></td>
+                        <td th:text="${cartItem?.item?.attribute1} ${cartItem?.item?.attribute2}
+                            ${cartItem?.item?.attribute3} ${cartItem?.item?.attribute4}
+                            ${cartItem?.item?.attribute5} ${cartItem?.item?.product.name}"></td>
+                        <td th:text="${cartItem?.inStock}"></td>
                         <td>
                             <input type="text" name="${cartItem.item.itemId}"
                                    value="${cartItem.quantity}" />
                         </td>
-                        <td><fmt:formatNumber value="${cartItem.item.listPrice}"
-                                              pattern="$#,##0.00" /></td>
-                        <td><fmt:formatNumber value="${cartItem.total}"
-                                              pattern="$#,##0.00" /></td>
+                        <td><span th:text="${#numbers.formatDecimal(cartItem?.item?.listPrice, 2,2)}"></span></td>
+                        <td><span th:text="${#numbers.formatDecimal(cartItem?.total, 2,2)}"></span></td>
                         <td>
-                            <a href="removeCartItem?workingItemId=${cartItem.item.itemId}" class="Button"> Remove</a>
+                            <a th:href="@{/cart/removeCartItem(workingItemId=${cartItem?.item?.itemId})}" class="Button"> Remove</a>
                         </td>
                     </tr>
-                </c:forEach>
+                </th:block>
+                </div>
                 <tr>
                     <td colspan="7">
-                        Sub Total: <fmt:formatNumber value="${sessionScope.cart.subTotal}" pattern="$#,##0.00" />
+                        Sub Total:
+                        <span th:text="${#numbers.formatDecimal(session.cart.subTotal, 2,2)}"></span>
                         <input type="submit" value="Update Cart"/>
                     </td>
                     <td>&nbsp;</td>
@@ -80,18 +81,13 @@
 
 
 
-        <c:if test="${sessionScope.cart.numberOfItems > 0}">
-            <a href="newOrderForm" class="Button">Proceed to Checkout </a>
-        </c:if>
+        <a th:if="${session.cart.numberOfItems > 0}" href="/order/newOrderForm" class="Button">Proceed to Checkout </a>
+
     </div>
 
-    <div id="MyList">
-        <th:iftest="${sessionScope.loginAccount != null}">
-            <th:if test="${!empty sessionScope.loginAccount.listOption}">
-                <%@ include file="includeMyList.jsp"%>
-            </th:if>
-        </th:if>
-    </div>
+<!--    <div th:if="${session?.loginAccount != null && !empty session?.loginAccount?.listOption}" id="MyList">-->
+<!--        <p th:replace="/cart/includeMyList"></p>-->
+<!--    </div>-->
 
     <div id="Separator">&nbsp;</div>
 </div>
