--- a/src/main/resources/templates/catalog/category.html
+++ b/src/main/resources/templates/catalog/category.html
@@ -14,11 +14,11 @@
     <a href="/catalog/index">Return to Main Menu</a>
 </div>
 
-<div id="Catalog2">
+<div id="Catalog2" class="Catalog2">
 
     <h2 th:text="${category.categoryName}">Category Name</h2>
 </div>
-<div class="product" id="product">
+<div class="Catalog" id="product">
     <table>
     <tr>
         <th>Product ID</th>
