--- a/src/main/resources/templates/catalog/product.html
+++ b/src/main/resources/templates/catalog/product.html
@@ -35,7 +35,7 @@
                 <td th:text="${item1.attribute1}">attribut1</td>
                 <td th:text="'$' + ${#numbers.formatDecimal(item1.listPrice, 1, 2)}"></td>
                 <td>
-                    <a th:href="@{addItemToCart(workingItemId=${item1.itemId},act='CART')}" class="Button">Add to Cart</a>
+                    <a th:href="@{/cart/addItemToCart(workingItemId=${item1.itemId},act='CART')}" class="Button">Add to Cart</a>
                 </td>
             </tr>
         </th:block>
