--- a/src/main/resources/templates/common/top.html
+++ b/src/main/resources/templates/common/top.html
@@ -15,7 +15,7 @@
 
     <div id="Menu">
         <div id="MenuContent">
-            <a href="cartForm"><img align="middle" name="img_cart" src="/images/cart.gif"/></a>
+            <a href="/cart/cartForm"><img align="middle" name="img_cart" src="/images/cart.gif"/></a>
 
             <img align="middle" src="/images/separator.gif"/>
             <th:block th:if="${session.loginAccount==null}">
