--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -7,7 +7,7 @@
     <link rel="StyleSheet" href="/css/mypetstore.css" type="text/css"
           media="screen" />
 
-    <header th:replace="common/top"></header>
+    <header th:replace="~{common/top}"></header>
 </head>
 <body>
 <div id="Catalog">
@@ -25,6 +25,6 @@
 
 
 
-<footer th:replace="common/bottom"></footer>
+<footer th:replace="~{common/bottom}"></footer>
 </body>
 </html>
