--- a/src/main/resources/templates/catalog/main.html
+++ b/src/main/resources/templates/catalog/main.html
@@ -7,7 +7,7 @@
           media="screen" />
 </head>
 <body>
-  <header th:replace="common/top"></header>
+  <header th:replace="~{common/top}"></header>
   <div id="Welcome">
       <div id="WelcomeContent">
           <!-- 显示登录用户的firstname -->
@@ -60,6 +60,6 @@
 
       <div id="Separator">&nbsp;</div>
   </div>
-  <footer th:replace="common/bottom"></footer>
+  <footer th:replace="~{common/bottom}"></footer>
 </body>
 </html>
