--- a/src/main/resources/templates/cart/cart.html
+++ b/src/main/resources/templates/cart/cart.html
@@ -24,7 +24,7 @@
 
         <h2>Shopping Cart</h2>
 
-        <form>
+        <form th:action="@{/cart/updateCart}" method="post">
             <table id="Items">
                 <tr>
                     <th><b>Item ID</b></th>
@@ -38,7 +38,7 @@
                 </tr>
 
 
-                    <tr th:if="${session.cart.numberOfItems == 0 || session.cart.numberOfItems == null}">
+                    <tr th:if="${session.cart?.numberOfItems == 0 || session.cart?.numberOfItems == null}">
                         <td colspan="8"><b>Your cart is empty.</b></td>
                     </tr>
                 <div th:if="${session.cart.numberOfItems != 0 && session.cart.numberOfItems != null}">
@@ -46,17 +46,17 @@
                     <tr class="item" itemID=${cartItem.item.itemId}>
                         <td class="itemId">
 
-                            <a th:href="@{itemForm(itemId=${cartItem?.item?.itemId})}">${cartItem?.item?.itemId} </a>
+                            <a href="" th:text="${cartItem?.item?.itemId}"> </a>
 
                         </td>
-                        <td th:text="${cartItem?.item?.product?.productId}"></td>
-                        <td th:text="${cartItem?.item?.attribute1} ${cartItem?.item?.attribute2}
+                        <td th:text="${cartItem?.item?.productId}"></td>
+                        <td th:text="|${cartItem?.item?.attribute1} ${cartItem?.item?.attribute2}
                             ${cartItem?.item?.attribute3} ${cartItem?.item?.attribute4}
-                            ${cartItem?.item?.attribute5} ${cartItem?.item?.product.name}"></td>
+                            ${cartItem?.item?.attribute5} ${cartItem?.item?.name}|"></td>
                         <td th:text="${cartItem?.inStock}"></td>
                         <td>
-                            <input type="text" name="${cartItem.item.itemId}"
-                                   value="${cartItem.quantity}" />
+                            <input type="text" th:name="${cartItem.item.itemId}"
+                                   th:value="${cartItem.quantity}" />
                         </td>
                         <td><span th:text="${#numbers.formatDecimal(cartItem?.item?.listPrice, 2,2)}"></span></td>
                         <td><span th:text="${#numbers.formatDecimal(cartItem?.total, 2,2)}"></span></td>
@@ -69,7 +69,7 @@
                 <tr>
                     <td colspan="7">
                         Sub Total:
-                        <span th:text="${#numbers.formatDecimal(session.cart.subTotal, 2,2)}"></span>
+                        <span th:text="${#numbers.formatDecimal(session.cart?.subTotal, 2,2)}"></span>
                         <input type="submit" value="Update Cart"/>
                     </td>
                     <td>&nbsp;</td>
@@ -81,7 +81,7 @@
 
 
 
-        <a th:if="${session.cart.numberOfItems > 0}" href="/order/newOrderForm" class="Button">Proceed to Checkout </a>
+        <a th:if="${session.cart?.numberOfItems > 0}" href="/order/newOrderForm" class="Button">Proceed to Checkout </a>
 
     </div>
 
