cart and order all completed

--- a/src/main/resources/templates/catalog/category.html
+++ b/src/main/resources/templates/catalog/category.html
@@ -6,11 +6,11 @@
 
     <link rel="StyleSheet" href="/css/mypetstore.css" type="text/css"
           media="screen" />
+</head>
 
-    <header th:replace="~{common/top}"></header>
 
 <body>
-
+<header th:replace="~{common/top}"></header>
 <div id="Content">
 <div id="BackLink">
     <a href="/catalog/index">Return to Main Menu</a>
