--- a/src/main/resources/templates/order/newOrder.html
+++ b/src/main/resources/templates/order/newOrder.html
@@ -32,12 +32,10 @@
 
             <th:block th:each="cartItem:${session.cart.cartItems}">
               <tr>
+                <td th:text="${cartItem?.item?.itemId}"></td>
                 <td th:text="${cartItem?.item?.productId}"></td>
-                <td th:text="|${cartItem?.item?.attribute1} ${cartItem?.item?.attribute2}
-                            ${cartItem?.item?.attribute3} ${cartItem?.item?.attribute4}
-                            ${cartItem?.item?.attribute5} ${cartItem?.item?.name}|"></td>
                 <td th:text="${cartItem?.inStock}"></td>
-                <td th:text="${cartItem.quantity}"></td>
+                <td th:text="${cartItem?.quantity}"></td>
                 <td> <span th:text="${#numbers.formatDecimal(cartItem.item?.listPrice, 2,2)}"></span></td>
                 <td><span th:text="${#numbers.formatDecimal(cartItem?.total, 2, 2)}"></span></td>
               </tr>
